--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,7 @@ subjects:
 - !lcsh 'Girls -- Juvenile fiction'
 - !lcsh 'Sisters -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: 'The Corner House Girls in a Play
 
   How they rehearsed, how they acted, and what the play brought in'
